@@ -1,4 +1,4 @@
 DIST dbmathml.dtd 3525 SHA256 70da7140035621330f1b5ab6926197c3c3af467f2207d55a41f6396d9ad96abd SHA512 031ad81e0fd873d2ed0fb78a074cc2de93ea7c937d85aac6cb2dc3023e3ba494a9a20f485b5355ce9060aea9adae192c9259b59139ac71273ca3fb858a240704 WHIRLPOOL fff4da1abccf69ebf42963f31571da7ba173008410c08b78e0983d6ca81bb16c6bb0cc5081c472ca842223ba598be5e5f1520df7a59b6466836343af7a28e8a5
-EBUILD docbook-mathml-dtd-1.1_rc1.ebuild 1699 SHA256 788ee01a09273911c2bac287d408e88aa06c550f9d5d555446a678d99ac83395 SHA512 4aaa470acee31adfc5ba888267da9dce8e1b597af1afd183d0a2a7c186a4fff0c2fcaed763071f56ea346c2f2158639fc3cbf16ce1beb03b8b64d37fb75ccafd WHIRLPOOL 4ca20b901210ac430b9d907785ebb434b6a0d8101100ba531c9fb1fb1400889832ce02a5855d523e7809e3db223497bd9e1230ee9efefc1466ef616c8110ff67
-MISC ChangeLog 790 SHA256 c92e4743bab2ca4cf49c68abaebfc614372dceab578726f8b480ec7ba9d3d01d SHA512 62b0990903641a6f305968f36c2f39634f06fd98d60b402c74a06d6dacb0c0daf1740c1e591b3576ebfed6e29b2b8a6e41568b1b3ab5b677c78d6ce6c9aebb8d WHIRLPOOL a32a33f975fa992e44cca893f3b07fbc7d6434b1889eae1bf6ddb60a580f60f67130e9762ca4df0101763b0fa76ac55c5c79fa20c7ea949faef719a81e9a0c5c
+EBUILD docbook-mathml-dtd-1.1_rc1.ebuild 1689 SHA256 3247dc1c30877e786df1ef59b412522a6d9c853e015b0f254acd9c1f87f9253b SHA512 e5bb5f40294625491f0c52d38f26fbff2325ab409d873ab0f96c11c3635a6649dbe7fecab6462699303fe36ef57e8df5c98bd960887dff5e6508889f3c0d4b16 WHIRLPOOL d7712860d3cb9c86dcd31d8a18c42dc974069783b211531d2c6edb54a5e2d3d55272d0a2e425bca6b2017f9825aee1d869dd4febfc442272481c9fbfd2e89cdd
+MISC ChangeLog 970 SHA256 3e5c3df15f771be81c6883715399a2a7a7fdc4613e45cb541e59301ad81aff86 SHA512 7c3c7b16cf5dfe4f25c02338e72ed319a78a41808d84f2037cb6d2a0e1cf4e7f33a8d0117d22c15b2a32d11a2d34ede0b8c296dc75a66e11bae9aa7b14909634 WHIRLPOOL 6539044e97cb425e51d77eec5889fb05b47c6461e08bad3fdaf58614e20adb25191a4e3991960025eae16b6e6042437f1171ade36bac5a7871e0e3d2996a583b
 MISC metadata.xml 214 SHA256 c1f09dc7d5313cd2da7b82259c7846ed23144d62b15e59680ada90e2b6b4d154 SHA512 aeb2fb354a9ddf41c45a071091a58b91eaf8b25d6d2c49e3e3daa547b591a54530144de4533573160b48dc356289c909612c4e3c80e387f081f88cb39263e130 WHIRLPOOL 54d8861daedd18ca38e4ada0fb71026c612b63946d47a9b34de90d1d6d85c8ce05c0a4b97730f554ea637d73ccce8ed207d33e707c2b8c1dd28af24cf44dd186
